--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ navbar-links:
 social-network-links:
   email: "coastalaighana@gmail.com"
   facebook: 
-  github: coastalartificialintelligence
+  github: coastalaighana
   twitter: 
   linkedin: ""
   #stackoverflow: "3943160/daattali"
