--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ plugins:
 
 navbar-links:
   Blog: "/"
-  Hire Us: "https://coastalartificialintelligence.github.io/"
+  Hire Us: "https://nanaboateng.github.io/"
   Projects: "projects"
   About Us : "aboutme"
   Contact: "aboutme"
@@ -16,9 +16,9 @@ navbar-links:
 
 
 social-network-links:
-  email: "coastalaighana@gmail.com"
+  email: "unltd148@yahoo.co.uk"
   facebook: 
-  github: coastalaighana
+  github: restanalytics
   twitter: 
   linkedin: ""
   calendly: ""
